# snyk-scm-mapper

./: .gitignore  .snyk  Dockerfile  README.md  SCENARIOS.md  entrypoint.sh  output.json  pyproject.toml  requirements.txt  snyk-orgs.yaml  snyk-sync.yaml  test.py
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: build.yml  snyk_monitor.yml  snyk_test.yml  test.yml
conf/: snyk-orgs.yaml  snyk-sync.yaml
scripts/: aws_cron.sh  entrypoint-api-import.sh  entrypoint.sh  export_aws_secrets.py  install_snyk_tools.sh  rate_limits.sh
snyk_scm_mapper/: api.py  cli.py  utils.py
snyk_scm_mapper/models/: organizations.py  repositories.py  sync.py
snyk_sync/: __version__.py  api.py  cli.py  models.py  models_old.py  utils.py  v3_test.py
snyk_sync/models/: organizations.py  repositories.py  sync.py
snyk_watcher/: __version__.py  app.py  models.py  utils.py
tests/: rate_limit_debug.py  test.txt  test_snyk_watcher.py  v3_test.py
tests/examples/: config.yaml  github-import-targets-2.json  github-import-targets.json  import-targets-2.json  import-targets.json  import.yaml  snyk-orgs.yaml  tag-updates.json
