[tool.poetry]
name = "snyk-sync"
version = "0.1.0"
description = "A tool to sync Snyk projects with GitHub repos"
authors = ["Chris Barker <chris.barker@snyk.io>"]

[tool.poetry.dependencies]
python = "^3.9"
pysnyk = "^0.6.2"
PyGithub = "^1.55"
click = "^8.0.1"
pydantic = "^1.8.2"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119