[tool.poetry]
name = "snyk-sync"
version = "0.3.0"
description = "A tool to sync Snyk projects with GitHub repos"
authors = ["Chris Barker <chris.barker@snyk.io>"]

[tool.poetry.dependencies]
python = "^3.9"
pysnyk = "^0.9"
PyGithub = "^1.55"
click = "^8.0.4"
pydantic = "^1.9"
typer = "^0.4.0"
pyyaml = "^6"

[tool.poetry.dev-dependencies]
pytest = "^7"
black = "^22"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119