[tool.poetry]
name = "snyk-sync"
version = "0.3.0"
description = "A tool to sync Snyk projects with GitHub repos"
authors = ["Chris Barker <chris.barker@snyk.io>", "Scott Esbrandt <scott.esbrandt@snyk.io>"]

[tool.poetry.dependencies]
python = "^3.9"
pysnyk = "^0.9"
PyGithub = "^1.55"
click = "^8.0.4"
pydantic = "^1.9"
typer = "^0.4.0"
pyyaml = "^6"
certifi = ">=2021.10.8"
backoff = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-black = "^0.3.12"
pytest-cov = "^3.0.0"
pytest-mypy = "^0.9.1"
requests-mock = "^1.9.3"
pytest-isort = "^3"
black = "^22.1"
coverage = "^6.3.2"
types-requests = "^2.7.12"
types-retry = "^0.9.5"
mypy = ">=0.930"
types-PyYAML = "^6.0.4"

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.black]
line-length = 119

[tool.coverage.paths]
source = ["snyk_sync"]
tests = ["tests"]

[tool.mypy]
strict = false
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
plugins = "pydantic.mypy"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--black --mypy --isort --verbose --ignore examples --cov-report term-missing"
testpaths = [
    "tests", 
    "snyk_sync"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
